--- a/BindablePropertyExample/BindablePropertyExample.Android/BindablePropertyExample.Android.csproj
+++ b/BindablePropertyExample/BindablePropertyExample.Android/BindablePropertyExample.Android.csproj
@@ -46,6 +46,7 @@
         <Reference Include="System.Xml"/>
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="Syncfusion.Xamarin.SfPicker" Version="18.3.0.42"/>
         <PackageReference Include="Xamarin.Forms" Version="4.4.0.991640"/>
         <PackageReference Include="Xamarin.Android.Support.Design" Version="28.0.0.3"/>
         <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="28.0.0.3"/>
