--- a/BindablePropertyExample/BindablePropertyExample.iOS/BindablePropertyExample.iOS.csproj
+++ b/BindablePropertyExample/BindablePropertyExample.iOS/BindablePropertyExample.iOS.csproj
@@ -106,6 +106,7 @@
         <Reference Include="Xamarin.iOS"/>
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="Syncfusion.Xamarin.SfPicker" Version="18.3.0.42"/>
         <PackageReference Include="Xamarin.Forms" Version="4.4.0.991640"/>
     </ItemGroup>
     <ItemGroup>
