--- a/BindablePropertyExample/BindablePropertyExample/BindablePropertyExample.csproj
+++ b/BindablePropertyExample/BindablePropertyExample/BindablePropertyExample.csproj
@@ -10,6 +10,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Xamarin.Forms" Version="4.4.0.991640" />
+        <PackageReference Include="Syncfusion.Xamarin.SfPicker" Version="18.3.0.42"/>
+        <PackageReference Include="Xamarin.Forms" Version="4.8.0.1560"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Folder Include="Controls"/>
     </ItemGroup>
 </Project>
